<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#C21807">

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/white"/>
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fitsSystemWindows="true">

        <View
            android:id="@+id/v_line_1"
            android:layout_width="0dp"
            android:layout_height="2dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="100dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/tv_add"
            android:layout_width="150dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_line_1"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:background="@color/color_1"
            android:gravity="center"
            android:text="@string/add"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_value_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tv_add"
            app:layout_constraintTop_toTopOf="@id/tv_add"
            app:layout_constraintBottom_toBottomOf="@id/tv_add"
            android:layout_marginStart="20dp"
            android:text="@string/value"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_value_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_add"
            app:layout_constraintBottom_toBottomOf="@id/tv_add"
            app:layout_constraintStart_toEndOf="@id/tv_value_1"
            android:layout_marginStart="10dp"
            android:text="@string/num_default"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <View
            android:id="@+id/v_line_2"
            android:layout_width="0dp"
            android:layout_height="2dp"
            app:layout_constraintTop_toBottomOf="@id/tv_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/tv_minus"
            android:layout_width="150dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_line_2"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:paddingHorizontal="5dp"
            android:background="@color/color_2"
            android:gravity="center"
            android:text="@string/minus"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_value_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tv_minus"
            app:layout_constraintTop_toTopOf="@id/tv_minus"
            app:layout_constraintBottom_toBottomOf="@id/tv_minus"
            android:layout_marginStart="20dp"
            android:text="@string/value"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_value_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_minus"
            app:layout_constraintBottom_toBottomOf="@id/tv_minus"
            app:layout_constraintStart_toEndOf="@id/tv_value_2"
            android:layout_marginStart="10dp"
            android:text="@string/num_default"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <View
            android:id="@+id/v_line_3"
            android:layout_width="0dp"
            android:layout_height="2dp"
            app:layout_constraintTop_toBottomOf="@id/tv_minus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/tv_multiply"
            android:layout_width="150dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_line_3"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:background="@color/color_3"
            android:gravity="center"
            android:text="@string/multiply"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_value_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tv_multiply"
            app:layout_constraintTop_toTopOf="@id/tv_multiply"
            app:layout_constraintBottom_toBottomOf="@id/tv_multiply"
            android:layout_marginStart="20dp"
            android:text="@string/value"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_value_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_multiply"
            app:layout_constraintBottom_toBottomOf="@id/tv_multiply"
            app:layout_constraintStart_toEndOf="@id/tv_value_3"
            android:layout_marginStart="10dp"
            android:text="@string/num_default"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <View
            android:id="@+id/v_line_4"
            android:layout_width="0dp"
            android:layout_height="2dp"
            app:layout_constraintTop_toBottomOf="@id/tv_multiply"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/tv_random"
            android:layout_width="150dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_line_4"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:background="@color/color_4"
            android:gravity="center"
            android:text="@string/random"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_value_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tv_random"
            app:layout_constraintTop_toTopOf="@id/tv_random"
            app:layout_constraintBottom_toBottomOf="@id/tv_random"
            android:layout_marginStart="20dp"
            android:text="@string/value"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_value_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_random"
            app:layout_constraintBottom_toBottomOf="@id/tv_random"
            app:layout_constraintStart_toEndOf="@id/tv_value_4"
            android:layout_marginStart="10dp"
            android:text="@string/num_default"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <View
            android:id="@+id/v_line_5"
            android:layout_width="0dp"
            android:layout_height="2dp"
            app:layout_constraintTop_toBottomOf="@id/tv_random"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/white"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_stop_add"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bt_stop_minus"
            app:layout_constraintTop_toTopOf="@id/v_line_5"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/color_1"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:text="@string/stop_add"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_stop_minus"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/bt_stop_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/bt_stop_add"
            app:layout_constraintBottom_toBottomOf="@id/bt_stop_add"
            android:backgroundTint="@color/color_2"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:text="@string/stop_minus"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_stop_multiply"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/bt_stop_add"
            app:layout_constraintEnd_toEndOf="@id/bt_stop_add"
            app:layout_constraintTop_toBottomOf="@id/bt_stop_add"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/color_3"
            android:background="@drawable/bg_button"
            android:text="@string/stop_multiply"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_stop_random"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/bt_stop_minus"
            app:layout_constraintTop_toTopOf="@id/bt_stop_multiply"
            app:layout_constraintBottom_toBottomOf="@id/bt_stop_multiply"
            android:backgroundTint="@color/color_4"
            android:background="@drawable/bg_button"
            android:text="@string/stop_random"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <!--  PLAY BUTTONS  -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_play_add"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/bt_stop_add"
            app:layout_constraintEnd_toEndOf="@id/bt_stop_add"
            app:layout_constraintTop_toTopOf="@id/bt_stop_add"
            app:layout_constraintBottom_toBottomOf="@id/bt_stop_add"
            android:background="@drawable/bg_button_run_add"
            android:gravity="center"
            android:text="@string/play_add"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_play_minus"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/bt_stop_minus"
            app:layout_constraintEnd_toEndOf="@id/bt_stop_minus"
            app:layout_constraintTop_toTopOf="@id/bt_stop_minus"
            app:layout_constraintBottom_toBottomOf="@id/bt_stop_minus"
            android:background="@drawable/bg_button_run_minus"
            android:gravity="center"
            android:text="@string/play_minus"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_play_multiply"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/bt_stop_multiply"
            app:layout_constraintEnd_toEndOf="@id/bt_stop_multiply"
            app:layout_constraintTop_toTopOf="@id/bt_stop_multiply"
            app:layout_constraintBottom_toBottomOf="@id/bt_stop_multiply"
            android:background="@drawable/bg_button_run_multiply"
            android:gravity="center"
            android:text="@string/play_multiply"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_play_random"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/bt_stop_random"
            app:layout_constraintEnd_toEndOf="@id/bt_stop_random"
            app:layout_constraintTop_toTopOf="@id/bt_stop_random"
            app:layout_constraintBottom_toBottomOf="@id/bt_stop_random"
            android:background="@drawable/bg_button_run_random"
            android:gravity="center"
            android:text="@string/play_random"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:text="@string/author"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#E2E5DE"/>

</androidx.constraintlayout.widget.ConstraintLayout>